Fix java 25 thread ID access in MetalFrameProbe